k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: containerize-angular-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: containerize-angular-app
  template:
    metadata:
      labels:
        app: containerize-angular-app
    spec:
      containers:
        - name: containerize-angular-app
          image: sphamandla38/containerize-angular-app:0.0.4
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
