k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: containerize-angular-app-service
spec:
  type: ClusterIP
  selector:
    app: containerize-angular-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
